##
## (C) 2003-2005 Francesco Salvestrini <salvestrini@users.sourceforge.net>
##
## Input file for automake
##

include $(top_srcdir)/Makefile.sub

SUBDIRS =					\
	scripts

##
## NOTE:
##     autotools dir is already shipped by autotools ... :-)
##
##EXTRA_DIST =                                  \
##      autotools
